<resources>
    <string name="app_name">GitHub API</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app">Гитхаб API</string>
    <string name="owner_app">by Kirill Shiryaev</string>
    <string name="github_sign_in">Войти через GitHub</string>
    <string name="google_sign_in">Войти через Google</string>
    <string name="or">Или</string>
    <string name="guest_sign_in">Войти как Гость</string>
    <string name="input">Введите название репозитория...</string>
    <string name="button_clear_text">Очистить избранное</string>
    <string name="username_title">Username</string>
    <string name="login_info">rivizoft</string>
    <string name="description">Описание:</string>
    <string name="delete_from_favorite">Удалить из избранного</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="wait">Подождите...</string>
</resources>
