<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.RepositoryInfoFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_repo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="Repository"
            android:textColor="@color/colorBlue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp">

            <ImageView
                android:id="@+id/iv_profile_avatar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@color/colorBlue"/>

            <TextView
                android:id="@+id/tv_profile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/login_info"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_fork" />

            <TextView
                android:id="@+id/tv_count_forks_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="100"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDark"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/tv_count_stars_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="156k"
                android:textSize="15sp"
                android:textColor="@color/colorDark" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDark"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/tv_date_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="12.02.2000"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue" />

        <TextView
            android:id="@+id/tv_description_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="Open source, web-based agile project management, featuring: Goal planner, Story management, Issue-tracker, Code review, SCM Integration, Wiki Blog.  It is intended to assist the collaborative aspect of work carried out by software development teams." />

        <ToggleButton
            android:id="@+id/toggle_button_add_remove_repo_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:checked="false"
            android:textOn="@string/delete_from_favorite"
            android:textOff="@string/add_to_favorite"
            android:textColor="@color/colorWhite"
            android:background="@color/colorRed" />

    </LinearLayout>

</ScrollView>